--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,10 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+.jp {
+
+    font-family: 'Noto Sans JP', sans-serif;
 }
