--- a/docs/styles.css
+++ b/docs/styles.css
@@ -485,15 +485,30 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.relative {
+  position: relative;
+}
+.inset-0 {
+  inset: 0px;
+}
+.top-0 {
+  top: 0px;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 .flex {
   display: flex;
+}
+.h-auto {
+  height: auto;
 }
 .h-full {
   height: 100%;
@@ -501,31 +516,23 @@ video {
 .min-h-screen {
   min-height: 100vh;
 }
-.w-2\/3 {
-  width: 66.666667%;
+.w-12 {
+  width: 3rem;
 }
-.w-56 {
-  width: 14rem;
+.w-32 {
+  width: 8rem;
+}
+.w-8 {
+  width: 2rem;
 }
 .w-full {
   width: 100%;
 }
-.max-w-sm {
-  max-width: 24rem;
+.max-w-7xl {
+  max-width: 80rem;
 }
-.flex-1 {
-  flex: 1 1 0%;
-}
-.cursor-pointer {
-  cursor: pointer;
-}
-.appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-.flex-col {
-  flex-direction: column;
+.max-w-xl {
+  max-width: 36rem;
 }
 .items-center {
   align-items: center;
@@ -536,64 +543,50 @@ video {
 .justify-between {
   justify-content: space-between;
 }
-.rounded {
-  border-radius: 0.25rem;
+.gap-12 {
+  gap: 3rem;
 }
-.rounded-bl-none {
-  border-bottom-left-radius: 0px;
-}
-.rounded-br-none {
-  border-bottom-right-radius: 0px;
-}
-.rounded-tl-none {
-  border-top-left-radius: 0px;
-}
-.rounded-tr-none {
-  border-top-right-radius: 0px;
-}
-.border-0 {
-  border-width: 0px;
-}
-.border-transparent {
-  border-color: transparent;
-}
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 30 28 / var(--tw-bg-opacity));
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(244 152 0 / var(--tw-bg-opacity));
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .p-2 {
   padding: 0.5rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-14 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 .text-center {
   text-align: center;
 }
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .uppercase {
   text-transform: uppercase;
@@ -601,23 +594,63 @@ video {
 .tracking-wide {
   letter-spacing: 0.025em;
 }
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(30 30 28 / var(--tw-text-opacity));
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.underline {
-  text-decoration-line: underline;
 }
 
 body {
     font-family: 'Noto Sans', sans-serif;
 }
 
+@font-face {
+    font-family: Minion;
+    src: url("docs/MinionVariableConcept-Roman.otf") format("opentype");
+}
+
+@font-face {
+    font-family: AdvertPro;
+    src: url("docs/AdvertPro-Light.otf") format("opentype");
+}
+body {
+    font-family: 'AdvertPro', sans-serif;
+}
+
+h2 {
+    font-family: Minion;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5rem;
+    line-height: 1.5;
+}
+
+
 .jp {
 
     font-family: 'Noto Sans JP', sans-serif;
+}
+
+
+@media (min-width: 768px) {
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+
+@media (min-width: 1024px) {
+
+  .lg\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
