--- a/docs/styles.css
+++ b/docs/styles.css
@@ -597,14 +597,11 @@ video {
 .tracking-widest {
   letter-spacing: 0.1em;
 }
-.text-white {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(30 30 28 / var(--tw-text-opacity));
 }
 
-body {
-    font-family: 'Noto Sans', sans-serif;
-}
 
 @font-face {
     font-family: Minion;
