--- a/docs/styles.css
+++ b/docs/styles.css
@@ -500,6 +500,9 @@ video {
 .inset-0 {
   inset: 0px;
 }
+.left-1\/2 {
+  left: 50%;
+}
 .top-0 {
   top: 0px;
 }
@@ -510,8 +513,8 @@ video {
 .flex {
   display: flex;
 }
-.h-\[82px\] {
-  height: 82px;
+.h-\[41px\] {
+  height: 41px;
 }
 .h-auto {
   height: auto;
@@ -522,8 +525,8 @@ video {
 .min-h-screen {
   min-height: 100vh;
 }
-.w-32 {
-  width: 8rem;
+.w-12 {
+  width: 3rem;
 }
 .w-8 {
   width: 2rem;
@@ -545,6 +548,13 @@ video {
 }
 .max-w-lg {
   max-width: 32rem;
+}
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .items-center {
   align-items: center;
@@ -577,6 +587,9 @@ video {
 .p-2 {
   padding: 0.5rem;
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -598,6 +611,10 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -639,8 +656,7 @@ video {
 
 
 @font-face {
-    font-family: Minion;
-    src: url("MinionVariableConcept-Roman.otf") format("opentype");
+    font-family: "minion-pro", serif;
 }
 
 @font-face {
@@ -669,6 +685,14 @@ h1, h2 {
 
 @media (min-width: 1024px) {
 
+  .lg\:h-\[82px\] {
+    height: 82px;
+  }
+
+  .lg\:w-\[70px\] {
+    width: 70px;
+  }
+
   .lg\:p-6 {
     padding: 1.5rem;
   }
@@ -678,15 +702,15 @@ h1, h2 {
     padding-right: 1.5rem;
   }
 
-  .lg\:text-\[116px\] {
-    font-size: 116px;
+  .lg\:text-\[52px\] {
+    font-size: 52px;
   }
 
-  .lg\:text-\[78px\] {
-    font-size: 78px;
+  .lg\:text-\[77px\] {
+    font-size: 77px;
   }
 
-  .lg\:\!leading-\[122px\] {
-    line-height: 122px !important;
+  .lg\:\!leading-\[81px\] {
+    line-height: 81px !important;
   }
 }
