--- a/docs/styles.css
+++ b/docs/styles.css
@@ -620,11 +620,17 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.font-bold {
+  font-weight: 700;
+}
 .uppercase {
   text-transform: uppercase;
 }
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 .tracking-widest {
   letter-spacing: 0.1em;
@@ -675,6 +681,31 @@ h1, h2 {
     line-height: 1.5;
 }
 
+@media (min-width: 640px) {
+
+  .sm\:h-\[82px\] {
+    height: 82px;
+  }
+
+  .sm\:w-\[70px\] {
+    width: 70px;
+  }
+
+  .sm\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:py-7 {
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+}
+
 @media (min-width: 768px) {
 
   .md\:text-4xl {
@@ -684,23 +715,6 @@ h1, h2 {
 }
 
 @media (min-width: 1024px) {
-
-  .lg\:h-\[82px\] {
-    height: 82px;
-  }
-
-  .lg\:w-\[70px\] {
-    width: 70px;
-  }
-
-  .lg\:p-6 {
-    padding: 1.5rem;
-  }
-
-  .lg\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
 
   .lg\:text-\[52px\] {
     font-size: 52px;
