--- a/docs/styles.css
+++ b/docs/styles.css
@@ -510,11 +510,14 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
-.h-\[41px\] {
-  height: 41px;
+.h-\[62px\] {
+  height: 62px;
 }
 .h-auto {
   height: auto;
@@ -524,9 +527,6 @@ video {
 }
 .min-h-screen {
   min-height: 100vh;
-}
-.w-12 {
-  width: 3rem;
 }
 .w-8 {
   width: 2rem;
@@ -546,8 +546,8 @@ video {
 .max-w-7xl {
   max-width: 80rem;
 }
-.max-w-lg {
-  max-width: 32rem;
+.max-w-xl {
+  max-width: 36rem;
 }
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
@@ -578,7 +578,7 @@ video {
 }
 .bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(244 152 0 / var(--tw-bg-opacity));
+  background-color: rgb(238 135 16 / var(--tw-bg-opacity));
 }
 .object-cover {
   -o-object-fit: cover;
@@ -590,10 +590,6 @@ video {
 .p-3 {
   padding: 0.75rem;
 }
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -602,15 +598,15 @@ video {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 .text-center {
   text-align: center;
 }
 .font-serif {
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -620,20 +616,21 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .font-bold {
   font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
 }
+.tracking-\[0\.4em\] {
+  letter-spacing: 0.4em;
+}
 .tracking-wide {
   letter-spacing: 0.025em;
-}
-.tracking-wider {
-  letter-spacing: 0.05em;
-}
-.tracking-widest {
-  letter-spacing: 0.1em;
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -687,10 +684,6 @@ h1, h2 {
     height: 82px;
   }
 
-  .sm\:w-\[70px\] {
-    width: 70px;
-  }
-
   .sm\:p-6 {
     padding: 1.5rem;
   }
@@ -708,9 +701,8 @@ h1, h2 {
 
 @media (min-width: 768px) {
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .md\:inline {
+    display: inline;
   }
 }
 
