--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,11 @@ body {
     font-family: AdvertPro, sans-serif;
 }
 
+.font-serif {
+    font-family: "minion-pro";
+}
 h1, h2 {
-    font-family: Minion;
+    font-family: "minion-pro"!important;
     font-weight: 400;
     font-style: normal;
     font-size: 1.5rem;
