--- a/docs/styles.css
+++ b/docs/styles.css
@@ -528,8 +528,8 @@ video {
 .min-h-screen {
   min-height: 100vh;
 }
-.w-8 {
-  width: 2rem;
+.w-10 {
+  width: 2.5rem;
 }
 .w-\[70px\] {
   width: 70px;
@@ -539,9 +539,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.max-w-3xl {
-  max-width: 48rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -584,11 +581,8 @@ video {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.p-2 {
-  padding: 0.5rem;
-}
-.p-3 {
-  padding: 0.75rem;
+.p-6 {
+  padding: 1.5rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -598,9 +592,9 @@ video {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .text-center {
   text-align: center;
@@ -608,6 +602,9 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-\[42px\] {
+  font-size: 42px;
 }
 .text-lg {
   font-size: 1.125rem;
@@ -683,15 +680,6 @@ h1, h2 {
     height: 82px;
   }
 
-  .sm\:p-6 {
-    padding: 1.5rem;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
   .sm\:py-7 {
     padding-top: 1.75rem;
     padding-bottom: 1.75rem;
@@ -702,12 +690,12 @@ h1, h2 {
   .md\:inline {
     display: inline;
   }
+
+  .md\:text-\[55px\] {
+    font-size: 55px;
+  }
 }
 @media (min-width: 1024px) {
-
-  .lg\:text-\[52px\] {
-    font-size: 52px;
-  }
 
   .lg\:text-\[77px\] {
     font-size: 77px;
