--- a/docs/styles.css
+++ b/docs/styles.css
@@ -599,10 +599,6 @@ video {
 .text-center {
   text-align: center;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
 .text-\[42px\] {
   font-size: 42px;
 }
@@ -619,6 +615,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.leading-none {
+  line-height: 1;
 }
 .tracking-\[0\.4em\] {
   letter-spacing: 0.4em;
